# factorial

./: .gitignore  CHANGELOG.md  README.md  STORIES.md  factorial.py  pyproject.toml  requirements.txt  test_factorial.py
.github/workflows/: ci.yml
docs/: factorial_pkg.html  index.html  search.js
docs/factorial_pkg/: factorial.html
src/factorial_pkg/: __init__.py  __main__.py  factorial.py
tests/: conftest.py  test_factorial.py  test_integration.py
